--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<li><a href="#intro"><i class="icon-fire"><span>Intro</span></i></a></li>
 							<li><a href="#personal"><i class="icon-book"><span>Uploads</span></i></a></li>
 							
-							<li><a href="https://docs.google.com/document/d/e/2PACX-1vRVRQ9Crz6uboEDUUAuD3pNf6yeBio2yd5G4fA2TuPJEe2gbQdj6Hs1piZJgN9-HmYqzRFt35WnlvZl/pub"><i class="icon-suitcase"><span>curriculum vitae</span></i></a></li>
+							<li><a href="./cv.pdf"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
 							
 							<li><a href="#contact"><i class="icon-envelope-alt"><span>Contact</span></i></a></li>
 						</ul>
