--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<!-- social link -->
 			<div class="social-list">
 				<ul class="social">
-					<li><a href="https://twitter.com/mjaykumr"><i class="icon-twitter"></i></a></li>
+					<! --<li><a href="https://twitter.com/mjaykumr"><i class="icon-twitter"></i></a></li>>
 					
 					<li><a href="#"><i class="icon-linkedin"></i></a></li>
 					<li><a href="#"><i class="icon-github"></i></a></li>
