--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 				<ul class="social">
 					<! --<li><a href="https://twitter.com/mjaykumr"><i class="icon-twitter"></i></a></li>>
 					
-					<li><a href="#"><i class="icon-linkedin"></i></a></li>
-					<li><a href="#"><i class="icon-github"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/mjaykr/"><i class="icon-linkedin"></i></a></li>
+					<li><a href="https://github.com/mjaykr"><i class="icon-github"></i></a></li>
 					<li><a href="https://www.facebook.com/mjaykr"><i class="icon-facebook"></i></a></li>	
 				</ul>
 			</div>
