--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 			</section>
-			<!-- /Intro end -->
+Make_instrumental_profile_for_CMWP.m			<!-- /Intro end -->
 			
 			
 			
@@ -132,7 +132,7 @@
 											<h4><a href="https://youtu.be/zfi3OS-Wwq8">Resmat (Audio Missing)</a></h4>
 											<h4><a href="https://youtu.be/TIwuPt1JrhM">Text to Resmat File Conversion</a></h4>
                                             <h4><a href="matlab/text_to_resmat.m">Matlab file for Text to Resmat File Conversion</a></h4>  
-                                            <h4><a href="matlab/extract_peak.m">Extract Individual Peak</a></h4>
+                                            <h4><a href="matlab/Make_instrumental_profile_for_CMWP.m">Make Instrument File for CMWP</a></h4>
 									</div>
 
 								</div>
