--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<nav id="nav">
 				<!-- logo -->
 				<div class="logo">
-					<h2>Mirtunjay Kumar<span>PhD Student</span></h2>
+					<h2>Mirtunjay Kumar<span>Post Doctoral Research Associate</span></h2>
 				</div>
 				<!-- /logo end -->
 				<!-- mainnav -->
@@ -94,7 +94,7 @@
 						<img class="img-circle" src="img/avater/passport.jpg" alt=""/>
 						<h2>Mirtunjay Kumar</h2>
 						<hr>
-						<h3> I am working on “Experimental and Crystal Plasticity Simulation Study of the Deformation Behavior of Liquid Phase Sintered Tungsten Heavy Alloys”. My research is mainly focused on the fabrication of ternary nickel alloys and tungsten-based heavy alloy composites, and their microstructural, mechanical and texture evolution during the deformation process. The fabrication was done using the sintering of powders and the vacuum arc melting process. The microstructural characterizations were carried out on different length scales with different microscopes (OM, SEM and TEM). X-ray diffraction, neutron diffraction and electron backscattered diffraction were carried out to characterize the samples. The experimental results were further coupled with mean-field (viscoplastic self-consistent simulation), and Fast Fourier Transformation (FFT) based full-field crystal plasticity simulation (DAMASK). With the help of these studies, a comprehensive understanding of the deformation behaviour of tungsten heavy alloys was developed, with particular emphasis on that of the Ni-Fe-W solid solution matrix. Therefore, the critical role of slip localization in the formation of shear bands and microbands in the composite and matrix alloy has been identified, which is expected to shed light on strain localization and failure in ductile two-phase alloys. 
+						<h3> Recently, I completed my doctorate at the Indian Institute of Technology Kanpur with a dissertation entitled Experimental and Crystal Plasticity Simulation Study on the Deformation Behavior of Liquid Phase Sintered Tungsten Heavy Alloys. In Lightform, I lead the project that is focused on modelling the formability of light alloys during warm forming processes so that they can be used to fulfil the LightForm program's vision. It will also involve extending current crystal plasticity models to enrich the current description of the deformed state and couple them with phase transformation and dynamic precipitation models.
 						</h3>
 						<hr>
 					</div>
