--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 					</div>
 				</div>
 			</section>
-Make_instrumental_profile_for_CMWP.m			<!-- /Intro end -->
+			<!-- /Intro end -->
 			
 			
 			
