--- a/index.html
+++ b/index.html
@@ -155,14 +155,14 @@
 					<div class="span4">
 						<p>Contact me at the following adderess</p>
 						<ul class="info">
-							<li><i class="icon-home"></i><span>C-223, Hall 10, IIT Kanpur</span></li>
-							<li><i class="icon-phone"></i><span>+91-7388448881</span></li>
-							<li><i class="icon-envelope"></i><span>mjay@iitk.ac.in</span></li>
+							<li><i class="icon-home"></i><span>Room No. 124, Annex Building, Montegomey House, Manchester, M16 8PH </span></li>
+							<li><i class="icon-phone"></i><span>+44-7833824515</span></li>
+							<li><i class="icon-envelope"></i><span>mirtunjay.kumar@manchester.ac.uk</span></li>
 						</ul>
 					</div>
 					<div class="span4">
 						<div id="note"></div>
-						<form class="form" action="MAILTO:mjay@hotmail.com" method="post" enctype="text/plain">
+						<form class="form" action="MAILTO:mirtunjay.kumar@manchester.ac.uk" method="post" enctype="text/plain">
 						<input type="text" name="name" class="span4" placeholder="Name" required/>
 						<input type="text" class="span4" name="email" placeholder="Email" required/>
 						<textarea name="message" placeholder="Message" rows="8" class="span4"></textarea>
