--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<ul class="social">
 					<li><a href="https://www.linkedin.com/in/mjaykr/"><i class="icon-linkedin"></i></a></li>
 					<li><a href="https://github.com/mjaykr"><i class="icon-github"></i></a></li>
-					<li><a href="https://www.facebook.com/mjaykr"><i class="icon-facebook"></i></a></li>	
+					<li><a href="https://www.facebook.com/mjaykum/"><i class="icon-facebook"></i></a></li>	
 				</ul>
 			</div>
 			<!-- /social link end -->			
