--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 			<section id="intro" class="section intro">
 				<div class="row">
 					<div class="span8">
-						<img class="img-circle" src="img/avater/1passport.jpg" alt=""/>
+						<img class="img-circle" src="img/avater/passport.jpg" alt=""/>
 						<h2>Mirtunjay Kumar</h2>
 						<hr>
 						<h3> Recently, I completed my doctorate at the Indian Institute of Technology Kanpur with a dissertation entitled Experimental and Crystal Plasticity Simulation Study on the Deformation Behavior of Liquid Phase Sintered Tungsten Heavy Alloys. In Lightform, I lead the project that is focused on modelling the formability of light alloys during warm forming processes so that they can be used to fulfil the LightForm program's vision. It will also involve extending current crystal plasticity models to enrich the current description of the deformed state and couple them with phase transformation and dynamic precipitation models.
