--- a/cmwp/cmwp.htm
+++ b/cmwp/cmwp.htm
@@ -1911,9 +1911,7 @@ style='font-size:20.0pt;mso-bidi-font-size:16.0pt;line-height:120%;font-family:
 major-bidi'>sudo</span></b></span><b style='mso-bidi-font-weight:normal'><span
 lang=EN-US style='font-size:20.0pt;mso-bidi-font-size:16.0pt;line-height:120%;
 font-family:"Maiandra GD",sans-serif;mso-bidi-font-family:"Times New Roman";
-mso-bidi-theme-font:major-bidi'> apt-get install <span class=SpellE>gv</span> <span
-class=SpellE>zsh</span> libx11-dev <span class=SpellE>libxt</span>-dev
-libreadline-gplv2-dev glib-2.0<o:p></o:p></span></b></p>
+mso-bidi-theme-font:major-bidi'>apt install xterm gv zsh libxt-dev libx11-dev -y<o:p></o:p></span></b></p>
 
 <p class=MsoNormal style='margin-left:144.0pt;text-indent:36.0pt'><span
 lang=EN-US style='font-size:18.0pt;mso-bidi-font-size:16.0pt;line-height:120%;
