--- a/cmwp/cmwp.htm
+++ b/cmwp/cmwp.htm
@@ -1908,10 +1908,7 @@ major-bidi'><o:p>&nbsp;</o:p></span></p>
 class=SpellE><b style='mso-bidi-font-weight:normal'><span lang=EN-US
 style='font-size:20.0pt;mso-bidi-font-size:16.0pt;line-height:120%;font-family:
 "Maiandra GD",sans-serif;mso-bidi-font-family:"Times New Roman";mso-bidi-theme-font:
-major-bidi'>sudo</span></b></span><b style='mso-bidi-font-weight:normal'><span
-lang=EN-US style='font-size:20.0pt;mso-bidi-font-size:16.0pt;line-height:120%;
-font-family:"Maiandra GD",sans-serif;mso-bidi-font-family:"Times New Roman";
-mso-bidi-theme-font:major-bidi'>apt install xterm gv zsh libxt-dev libx11-dev -y<o:p></o:p></span></b></p>
+major-bidi'>sudo apt install xterm gv zsh libxt-dev libx11-dev -y   (updated on 06/04/2023)<o:p></o:p></span></b></p>
 
 <p class=MsoNormal style='margin-left:144.0pt;text-indent:36.0pt'><span
 lang=EN-US style='font-size:18.0pt;mso-bidi-font-size:16.0pt;line-height:120%;
