--- a/index.html
+++ b/index.html
@@ -94,8 +94,20 @@
 						<img class="img-circle" src="img/avater/passport.jpg" alt=""/>
 						<h2>Mirtunjay Kumar</h2>
 						<hr>
-						<h3> Recently, I completed my doctorate at the Indian Institute of Technology Kanpur with a dissertation entitled Experimental and Crystal Plasticity Simulation Study on the Deformation Behavior of Liquid Phase Sintered Tungsten Heavy Alloys. In Lightform, I lead the project that is focused on modelling the formability of light alloys during warm forming processes so that they can be used to fulfil the LightForm program's vision. It will also involve extending current crystal plasticity models to enrich the current description of the deformed state and couple them with phase transformation and dynamic precipitation models.
-						</h3>
+						<h3> Hello, I'm Mirtunjay Kumar, a dedicated materials scientist with a specialization in metal physics and physical metallurgy. Currently, I'm working as a Postdoctoral Research Associate at the University of Manchester, UK, where I'm involved in a project focused on modelling the formability of light alloys during warm forming processes.
+
+I hold a dual degree (M.Tech + Ph.D.) from the Department of Materials Science and Engineering at the Indian Institute of Technology Kanpur. My Ph.D. thesis delved into the deformation mechanisms of Tungsten heavy alloys (WHA) used in defense and civil sectors. I utilized neutron and x-ray diffraction, electron backscatter diffraction, and crystal plasticity simulations to study the role of the Ni-Fe-W matrix phase in WHA's deformation behavior.
+
+I have a strong background in microstructural and micro-chemical characterization using electron diffraction and spectroscopy. I have extensive experience with Scanning Electron Microscopy, Transmission Electron Microscopy, and X-ray Diffraction. I have also worked on manufacturing processes such as powder metallurgy and rolling.
+
+In terms of programming, I am proficient in Python, MATLAB, and have basic coding skills in Fortran and C++. I have used these skills to conduct mean-field crystal plasticity simulations and full-field crystal plasticity simulations, among other tasks.
+
+I have published several research papers in reputable journals, demonstrating my ability to conduct high-quality research and contribute to the scientific community. I look forward to continuing my research and making further contributions to the field of materials science.
+
+
+
+
+ </h3>
 						<hr>
 					</div>
 				</div>
