--- a/CV.html
+++ b/CV.html
@@ -9,9 +9,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <style>
     body {
-    margin: 0 auto;
-    max-width: 66.66%;
-        }
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      width: 100%;
+      height: 100vh;
+      box-sizing: border-box;
+      padding: 0 16.67%; /* This will leave 1/6 of the viewport width as padding on both sides */
+    }
 /*!
  *  Font Awesome 4.7.0 by @davegandy - http://fontawesome.io - @fontawesome
  *  License - http://fontawesome.io/license (Font: SIL OFL 1.1, CSS: MIT License)
