--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<li><a href="#intro"><i class="icon-fire"><span>Intro</span></i></a></li>
 							<li><a href="#personal"><i class="icon-book"><span>Uploads</span></i></a></li>
 							<li><a href="#contact"><i class="icon-envelope-alt"><span>Contact</span></i></a></li>
-							<li><a href="./CV.html"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
+							<li><a href="./cv.html"><i class="icon-suitcase"><span>Curriculum vitae</span></i></a></li>
 							
 							
 						</ul>
