--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                     </div>
                     <div class="text-center mt-10">
                         <div id="google-scholar-link" class="hidden text-center mb-6">
-                            <a href="https://scholar.google.com/citations?user=LlFMahOAAAAJ" target="_blank" class="text-slate-600 hover:text-blue-600 transition-colors duration-300 group inline-flex items-center">
+                            <a href="https://scholar.google.com/citations?user=LlFMah0AAAAJ" target="_blank" class="text-slate-600 hover:text-blue-600 transition-colors duration-300 group inline-flex items-center">
                                 <span>For a complete list, visit my Google Scholar profile</span>
                                 <i data-feather="external-link" class="w-4 h-4 ml-2 transition-transform duration-300 group-hover:scale-110"></i>
                             </a>
