--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
                 <a href="#experience" class="text-slate-600 hover:text-teal-600 font-medium transition-colors duration-300">Experience</a>
                 <a href="#publications" class="text-slate-600 hover:text-teal-600 font-medium transition-colors duration-300">Publications</a>
                 <a href="#skills" class="text-slate-600 hover:text-teal-600 font-medium transition-colors duration-300">Skills</a>
+                <a href="#cv" class="text-slate-600 hover:text-teal-600 font-medium transition-colors duration-300">CV</a>
                 <a href="#contact" class="bg-teal-500 hover:bg-teal-600 text-white font-bold py-2 px-5 rounded-full transition-all duration-300 shadow hover:shadow-lg">Contact</a>
             </div>
             <button id="mobile-menu-button" class="md:hidden text-slate-700">
@@ -87,6 +88,7 @@
             <a href="#experience" class="block py-2 text-slate-600 hover:text-teal-600">Experience</a>
             <a href="#publications" class="block py-2 text-slate-600 hover:text-teal-600">Publications</a>
             <a href="#skills" class="block py-2 text-slate-600 hover:text-teal-600">Skills</a>
+            <a href="#cv" class="block py-2 text-slate-600 hover:text-teal-600">CV</a>
             <a href="#contact" class="block mt-2 bg-teal-500 hover:bg-teal-600 text-white font-bold py-2 px-4 rounded-full text-center">Contact</a>
         </div>
     </header>
@@ -110,7 +112,7 @@
                            <svg class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.239-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/></svg>
                         </a>
                         <!-- Google Scholar Icon -->
-                        <a href="https://scholar.google.com/citations?user=LlFMah0AAAAJ" target="_blank" class="social-icon-link" aria-label="Google Scholar">
+                        <a href="https://scholar.google.com/citations?user=LlFMahOAAAAJ" target="_blank" class="social-icon-link" aria-label="Google Scholar">
                            <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar Logo" class="h-6">
                         </a>
                         <!-- ORCID Icon -->
@@ -363,6 +365,20 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </section>
+
+            <!-- CV Download Section -->
+            <section id="cv" class="py-24 bg-white/70 rounded-3xl">
+                <div class="container mx-auto px-6 text-center reveal">
+                    <h2 class="section-title">Download My CV</h2>
+                    <p class="text-lg text-slate-600 mb-10 max-w-2xl mx-auto">
+                        For a more detailed look at my work, publications, and professional background, please feel free to download a copy of my CV.
+                    </p>
+                    <a href="CV of Mirtunjay Kumar.pdf" download class="inline-flex items-center justify-center bg-teal-500 hover:bg-teal-600 text-white font-bold py-3 px-8 rounded-full text-lg transition-all duration-300 transform hover:scale-105 shadow-lg hover:shadow-xl group">
+                        <i data-feather="download" class="w-5 h-5 mr-3"></i>
+                        <span>Download CV</span>
+                    </a>
                 </div>
             </section>
 
