updated IJRMHM publication

--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
                     <div class="max-w-4xl mx-auto space-y-5">
                         <!-- Visible Publications -->
                         <div class="card publication-item">
+                            <h3 class="font-semibold text-lg text-slate-800">Automated quantification of dihedral angles in sintered tungsten heavy alloys using image processing</h3>
+                            <p class="text-sm text-slate-500">M. Kumar,H. Ranot, , et al. | International Journal of Refractory Metals and Hard Materials, 2025</p>
+                             <a href="https://doi.org/10.1016/j.ijrmhm.2025.107467" target="_blank" class="text-teal-600 hover:underline font-semibold text-sm mt-2 inline-block group">View Publication <i data-feather="arrow-right" class="inline h-4 w-4 transform group-hover:translate-x-1 transition-transform"></i></a>
+                        </div>
+                        <div class="card publication-item">
                             <h3 class="font-semibold text-lg text-slate-800">Mechanical Properties of Cycled Single Crystal LiNi<sub>0.8</sub>Mn<sub>0.1</sub>Co<sub>0.1</sub>O<sub>2</sub> (NMC811) Particles</h3>
                             <p class="text-sm text-slate-500">A. Jangde, M. Kumar, et al. | Batteries & Supercaps, 2025</p>
                             <a href="https://doi.org/10.1002/batt.202400691" target="_blank" class="text-teal-600 hover:underline font-semibold text-sm mt-2 inline-block group">View Publication <i data-feather="arrow-right" class="inline h-4 w-4 transform group-hover:translate-x-1 transition-transform"></i></a>
@@ -237,13 +242,14 @@
                             <p class="text-sm text-slate-500">P. Setia, S. S. Singh, et al. | Metallurgical and Materials Transactions A, 2025</p>
                              <a href="https://doi.org/10.1007/s11661-025-07714-7" target="_blank" class="text-teal-600 hover:underline font-semibold text-sm mt-2 inline-block group">View Publication <i data-feather="arrow-right" class="inline h-4 w-4 transform group-hover:translate-x-1 transition-transform"></i></a>
                         </div>
+
+                        
+                        <!-- Hidden Publications -->
                         <div class="card publication-item">
                             <h3 class="font-semibold text-lg text-slate-800">Implications of the Micromechanical Taylor Factor on Work Hardening Parameters</h3>
                             <p class="text-sm text-slate-500">M. Kumar & S. Mishra | Computational Materials Science, 2024</p>
                              <a href="https://doi.org/10.1016/j.commatsci.2024.112892" target="_blank" class="text-teal-600 hover:underline font-semibold text-sm mt-2 inline-block group">View Publication <i data-feather="arrow-right" class="inline h-4 w-4 transform group-hover:translate-x-1 transition-transform"></i></a>
                         </div>
-                        
-                        <!-- Hidden Publications -->
                         <div class="card publication-item hidden">
                             <h3 class="font-semibold text-lg text-slate-800">Evolution of Microstructure and Crystallographic Texture During Cold Rolling of Liquid Phase Sintered Tungsten Heavy Alloy</h3>
                             <p class="text-sm text-slate-500">M. Kumar, N. Gurao, & A. Upadhyaya | International Journal of Refractory Metals and Hard Materials, 2022</p>
