hide 4th publication

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                         
                         <!-- Hidden Publications -->
-                        <div class="card publication-item">
+                        <div class="card publication-item hidden">
                             <h3 class="font-semibold text-lg text-slate-800">Implications of the Micromechanical Taylor Factor on Work Hardening Parameters</h3>
                             <p class="text-sm text-slate-500">M. Kumar & S. Mishra | Computational Materials Science, 2024</p>
                              <a href="https://doi.org/10.1016/j.commatsci.2024.112892" target="_blank" class="text-teal-600 hover:underline font-semibold text-sm mt-2 inline-block group">View Publication <i data-feather="arrow-right" class="inline h-4 w-4 transform group-hover:translate-x-1 transition-transform"></i></a>
